@@ -41,9 +41,6 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.7.2</version>
-        <configuration>
-          <skipTests>true</skipTests>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -326,6 +323,12 @@
       <artifactId>jline</artifactId>
       <version>2.11</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.gnu</groupId>
